syntax = "proto3";

package drp.object.v1;

import "google/protobuf/struct.proto";

// Supposed to be the RIBLT stuff
message Vertex {
  message Operation {
    string type = 1;
    google.protobuf.Value value = 2;
  }
  string hash = 1;
  string node_id = 2;
  Operation operation = 3;
  repeated string dependencies = 4;
  string signature = 5;
}

message DRPObjectBase {
  string id = 1;
  optional string abi = 2;
  optional bytes bytecode = 3;
  repeated Vertex vertices = 4;
}
